More human refactors